zeit.content.article changes
============================

3.8.1 (unreleased)
------------------

- Unify checkin/correction wording (DEV-834).


3.8.0 (2015-08-24)
------------------

- Add block for referencing a "card stack" (DEV-892).

- Add form for ``tldr`` fields (DEV-883).


3.7.0 (2015-07-24)
------------------

- Allow image groups as well as images in article body (DEV-882).

- Move ``template`` and ``layout`` settings to ``IArticle`` from
  ``zeit.magazin.interfaces.ITemplateSettings`` (DEV-801).
  * Product config moved from ``zeit.magazin:article-template-url``
    to ``zeit.content.article:template-url``.
  * Requires ZEO update due to new fields on ``Article``.


3.6.25 (2015-07-06)
-------------------

- Setting default channel has moved to zeit.cms (DEV-833).


3.6.24 (2015-06-25)
-------------------

- Remove feature toggle ``zeit.content.cp.automatic`` (DEV-832).


3.6.23 (2015-06-23)
-------------------

- Styling for z.c.image Variant UI (DEV-798).


3.6.22 (2015-06-11)
-------------------

- Bugfix for publish lightbox (DEV-22).


3.6.21 (2015-06-09)
-------------------

- Display validation errors in Lightbox / Popup during publish. (DEV-22)


3.6.20 (2015-05-18)
-------------------

- Save form when removing channel entries (BUG-254).


3.6.19 (2015-05-04)
-------------------

- Replace MochiKit $$ with jQuery, which is *much* faster in Firefox.

- Make ``browser.testing.create_block`` more resilient against timing issues.


3.6.18 (2015-04-28)
-------------------

- Update CheckBoxWidget API (DEV-745).


3.6.17 (2015-04-23)
-------------------

- Remove global push ``enabled`` setting (DEV-704).


3.6.16 (2015-04-15)
-------------------

- Undo 3.6.15, it was a misunderstanding.


3.6.15 (2015-04-15)
-------------------

- Add feature toggle ``zeit.push.social-form`` for social media form fields.


3.6.14 (2015-03-30)
-------------------

- Update content-to-module adapters to accept a position, since landing zones