@@ -899,6 +899,7 @@
 .type-article #edit-form-article-content .block.type-portraitbox .field.fieldname-references .label,
 .type-article #edit-form-article-content .block.type-infobox .field.fieldname-references .label,
 .type-article #edit-form-article-content .block.type-timeline .field.fieldname-references .label,
+.type-article #edit-form-article-content .block.type-author .field.fieldname-references .label,
 .type-article #edit-form-article-content .block.type-video .field.fieldname-video .label,
 .type-article #edit-form-article-content .block.type-video .field.fieldname-video_2 .label {
   display:none;
@@ -1119,7 +1120,8 @@
   background: url("/fanstatic/zeit.cms/icons/icons_sprites.png") no-repeat scroll 20px -1920px transparent;
 }
 
-.type-article #article-editor-text .module-icon-portraitbox {
+.type-article #article-editor-text .module-icon-portraitbox,
+.type-article #article-editor-text .module-icon-author {
   background: url("/fanstatic/zeit.cms/icons/icons_sprites.png") no-repeat scroll 20px -2040px transparent;
 }
 
