@@ -65,7 +65,8 @@ MochiKit.Signal.connect(window, 'script-loading-finished', function() {
     zeit.edit.drop.registerContentHandler({
         accept: ['type-image', 'type-image-group',
                  'type-gallery', 'type-video',
-                 'type-infobox', 'type-portraitbox'],
+                 'type-infobox', 'type-portraitbox',
+                 'type-author'],
         activated_by: 'action-article-body-content-droppable'
     });
 
